force-app/main/default/objects/Expense_Exception__c/Expense_Exception__c.object-meta.xml
<CustomObject>
    <description>Expense Exception custom object for human review and auditable resolution of policy flags</description>
    <label>Expense Exception</label>
    <nameField>
        <displayFormat>EXC-{000000}</displayFormat>
        <label>Exception Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>