force-app/main/default/objects/Expense_Exception__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <label>Exception Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Policy Exception</fullName>
                <default>true</default>
                <label>Policy Exception</label>
            </value>
            <value>
                <fullName>Missing Receipt</fullName>
            </value>
            <value>
                <fullName>Potential Duplicate</fullName>
            </value>
            <value>
                <fullName>Amount Mismatch</fullName>
            </value>
            <value>
                <fullName>Budget Overrun</fullName>
            </value>
            <value>
                <fullName>Verification Required</fullName>
            </value>
            <value>
                <fullName>Human Review Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>