force-app/main/default/objects/Expense_Exception__c/fields/Expense_Item__c.field-meta.xml
<CustomField>
    <fullName>Expense_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense Item</label>
    <referenceTo>Expense_Item__c</referenceTo>
    <relationshipLabel>Expense Exceptions</relationshipLabel>
    <relationshipName>Expense_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>