force-app/main/default/objects/Expense_Exception__c/fields/Expense_Report__c.field-meta.xml
<CustomField>
    <fullName>Expense_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense Report</label>
    <referenceTo>Expense_Report__c</referenceTo>
    <relationshipLabel>Expense Exceptions</relationshipLabel>
    <relationshipName>Expense_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>