force-app/main/default/objects/Expense_Exception__c/fields/Explanation__c.field-meta.xml
<CustomField>
    <fullName>Explanation__c</fullName>
    <label>Explanation</label>
    <type>LongTextArea</type>
    <length>1000</length><visibleLines>3</visibleLines>
</CustomField>