force-app/main/default/objects/Expense_Exception__c/fields/Explanation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Explanation_Notes__c</fullName>
    <label>Explanation Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>