force-app/main/default/objects/Expense_Exception__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Resolved - Approved</fullName>
            </value>
            <value>
                <fullName>Resolved - Rejected</fullName>
            </value>
            <value>
                <fullName>Resolved - Clarification Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>