force-app/main/default/objects/Expense_Exception__c/fields/Travel_Request__c.field-meta.xml
<CustomField>
    <fullName>Travel_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Travel Request</label>
    <referenceTo>Travel_Request__c</referenceTo>
    <relationshipLabel>Expense Exceptions</relationshipLabel>
    <relationshipName>Expense_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>